--- a/client/task-manager-client/package.json
+++ b/client/task-manager-client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "boxicons": "^2.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
