--- a/server/task-manager-server/package.json
+++ b/server/task-manager-server/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "morgan": "^1.10.0",
     "pg": "^8.13.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "bcryptjs": "^2.4.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0"
   }
 }
