tasks-curd-complete-part-one

--- a/server/task-manager-server/package.json
+++ b/server/task-manager-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon --env-file .env src/index.js",
     "test": "set NODE_OPTIONS=--experimental-vm-modules && jest"
   },
   "author": "",
